syntax = "proto3";

package pb;

option go_package = "github.com/steve-mir/diivix_backend/pb";

message SearchResult2 {
  string result_id = 1;
  string email = 2;
  string phone = 3;
  string username = 4;
  string profile_image = 5;
  int32 following_count = 6;
  int32 followers_count = 7;
  string entity_type = 8;
  string first_name = 9;
  string last_name = 10;
  string user_id = 11;
  bool is_follower = 12;
  bool is_following = 13;
}

message SearchResponse2 {
  enum Category2 {
    Users = 0;
    Churches = 1;
    Posts = 2;
  }

  message CategoryResults2 {
    Category2 category = 1;
    repeated SearchResult2 results = 2;
  }

  repeated CategoryResults2 categories = 1;
}

message SearchRequest2 {
  string keyword = 1;
  string current_user_id = 2;
}
