syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

message UserData {
    string id = 1;
    string username = 2;
    string name = 3;
    string user_type = 4;
    string about = 5;
    string image_url = 6;
    string header_image_url = 7;
    google.protobuf.Timestamp created_at = 8;
    bool is_verified = 9;
    bool is_following = 10;
  }
  
message LocationData {
    string city = 1;
    string state = 2;
}

message PostMetricsData {
    int64 views = 1;
    int64 likes = 2;
    int64 comments = 3;
    int64 reposts = 4;
    bool post_liked = 5;
}

message PostImageData {
    string image_url = 1;
    string caption = 2;
}

message ChurchData {
    string id = 1;
    string name = 2;
    int64 members_count = 3;
    bool is_member = 4;
    int64 church_id = 5;
    google.protobuf.Timestamp created_at = 6;
    UserData userData = 7;
    LocationData location = 8;
}

message PostData {
    string id = 1;
    string content = 2;
    repeated string post_images = 3;
    int64 total_images = 4;
    google.protobuf.Timestamp created_at = 5;
    UserData userData = 6;
    PostMetricsData metrics = 7;
}